// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render STRING_CONTROL correctly with default value to empty 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="String only"
    value=""
  >
    <ControlString__Container>
      <div
        className="ControlString__Container-gxvWtt fBhBEN"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="String only"
          value=""
        >
          <Textarea
            className="ControlString__StyledTextarea-jUHsJW ccWikO"
            kind="primary"
            onChange={[Function]}
            placeholder="String only"
            value=""
          >
            <textarea
              className="ControlString__StyledTextarea-jUHsJW ccWikO Textarea__Textarea-dEcNVt WlyWE"
              kind="primary"
              onChange={[Function]}
              placeholder="String only"
              value=""
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="ControlString__ButtonWrapper-kaocaH fOhLBP"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR dPUstJ"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR dPUstJ"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD gdbAWr"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD gdbAWr A__A-cCPuKx eNMAVf"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw fcrwCh"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw fcrwCh"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;

exports[`should render STRING_CONTROL correctly with empty string 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_CONTROL",
      "values": Object {
        "value": "",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="String only"
    value=""
  >
    <ControlString__Container>
      <div
        className="ControlString__Container-gxvWtt fBhBEN"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="String only"
          value=""
        >
          <Textarea
            className="ControlString__StyledTextarea-jUHsJW ccWikO"
            kind="primary"
            onChange={[Function]}
            placeholder="String only"
            value=""
          >
            <textarea
              className="ControlString__StyledTextarea-jUHsJW ccWikO Textarea__Textarea-dEcNVt WlyWE"
              kind="primary"
              onChange={[Function]}
              placeholder="String only"
              value=""
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="ControlString__ButtonWrapper-kaocaH fOhLBP"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR dPUstJ"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR dPUstJ"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD gdbAWr"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD gdbAWr A__A-cCPuKx eNMAVf"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw fcrwCh"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw fcrwCh"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;

exports[`should render STRING_CONTROL correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_CONTROL",
      "values": Object {
        "value": "michaelhsu",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="String only"
    value="michaelhsu"
  >
    <ControlString__Container>
      <div
        className="ControlString__Container-gxvWtt fBhBEN"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="String only"
          value="michaelhsu"
        >
          <Textarea
            className="ControlString__StyledTextarea-jUHsJW ccWikO"
            kind="primary"
            onChange={[Function]}
            placeholder="String only"
            value="michaelhsu"
          >
            <textarea
              className="ControlString__StyledTextarea-jUHsJW ccWikO Textarea__Textarea-dEcNVt WlyWE"
              kind="primary"
              onChange={[Function]}
              placeholder="String only"
              value="michaelhsu"
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="ControlString__ButtonWrapper-kaocaH fOhLBP"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR dPUstJ"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR dPUstJ"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD gdbAWr"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD gdbAWr A__A-cCPuKx eNMAVf"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw fcrwCh"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw fcrwCh"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;
